docs(session): fresh-install validated; DXVK black-screen root-caused
Fresh wipe+reinstall proved the SWG crash fix (3fad7e6) auto-applies via
JavaAppDetector on a brand-new bottle (full safepoint _JAVA_OPTIONS +
dwrite=builtin seeded with no manual steps); launcher login screen renders on
both the post-install auto-launch and the manual Launch button, 0 hs_err dumps.
#84/#93 stay open until in-game render works.

Black-screen root cause nailed without re-downloading the 8.4GB game: engine
11.9 ships a working Vulkan/Metal stack (libMoltenVK 1.4.1 + winevulkan; a
direct x86_64 probe created a VkInstance and enumerated the M1 Pro GPU via
Metal), but DXVK is absent from the engine entirely, so D3D9 falls back to
wined3d->opengl32->AppleMetalOpenGLRenderer (deprecated GL) -> black. A runtime
game capture would be empty on the Vulkan side since the game never touches
Vulkan without DXVK. Fix (queue #1): bundle MoltenVK-compatible DXVK into the
engine, enable dxvkConfig.dxvk.

Also: xcodebuild -destination 'platform=macOS,arch=arm64' fixes a rebuild hang
in DTDKRemoteDeviceConnection startServiceBrowsers; and noted the orphaned
winedevice/services.exe pileup against the single-instance/cleanup work.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>